syntax = "proto3";
package pb;

import "base.proto";
import "gogoproto/gogo.proto";

option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.goproto_enum_prefix_all) = false;

option go_package = "api/pb";

service SystemSvc {
  rpc CreateCounter(CounterRequest) returns (StateReply) {}
  rpc GetCounter(CounterRequest) returns (CounterReply) {}
  rpc GetCounters(CounterRequest) returns (CountersReply) {}
  rpc ChangeCounter(CounterRequest) returns (CounterReply) {}
  rpc ResetCounter(CounterRequest) returns (CounterReply) {}
  rpc GetCounterByFlag(CounterRequest) returns (CounterReply) {}
}

message CounterRequest {
  Counter counter = 1;
}

message CounterReply {
  Counter counter = 1;
}

message CountersReply {
  repeated Counter counters = 1;
}

message Counter {
  // @inject_tag: db:"id" gorm:"primaryKey"
  int64 id = 1;
  // @inject_tag: db:"user_id"
  int64 user_id = 2;
  // @inject_tag: db:"flag"
  string flag = 3;
  // @inject_tag: db:"digit"
  int64 digit = 4;
  // @inject_tag: db:"status"
  int32 status = 5;
  // @inject_tag: db:"created_at"
  int64 created_at = 6;
  // @inject_tag: db:"updated_at"
  int64 updated_at = 7;
}
